<resources>
    <string name="app_name">Sars_And_Stripes</string>
    <string name="topLogo">Sars &amp; Stripes</string>
    <string name="login">Log In</string>
    <string name="enterUsernamePrompt">Enter Username:</string>
    <string name="enterPasswordPrompt">Enter Password:</string>
    <string name="createAccount">Create Account</string>
    <string name="userNameText"></string>
    <string name="passwordText"></string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="btnSignIn">Sign In</string>
    <string name="teamName">Powered By HotdogsAndBrainWaves</string>
    <string name="signUp">Sign Up</string>
    <string name="rePassword">Re-Enter Password:</string>
    <string name="eMail">Enter Email:</string>
    <string name="rePasswordText"></string>
    <string name="emailText"></string>
    <string name="emailHint">Enter Email Here</string>
    <string name="passwordHint">Enter Password Here</string>
    <string name="userHint">Enter Username Here</string>
    <string name="rePasswordHint">Re-Enter Password Here</string>
    <string name="firstNameHint">Enter First Name Here</string>
    <string name="lastNameHint">Enter Last Name Here</string>
    <string name="addressHint">Enter Address Here</string>
    <string name="phoneHint">Enter Phone Number Here</string>
    <string name="changePassword">Change Password</string>
    <string name="btnSaveNewPassword">Confirm New Password</string>



    <string name="imageFeelingSick">Feeling Sick</string>
    <string name="txtFeelingSick">FEELING SICK?</string>
    <string name="txtSickDesc">Click the button below to take a quick
    preliminary exam before speaking with one of our specialists</string>
    <string name="btnBegin"></string>
    <string name="btnProfile">PROFILE</string>
    <string name="btnLabs">LABS</string>
    <string name="btnSettings">SETTINGS</string>
    <string name="btnSymptoms">SYMPTOMS</string>
    <string name="btnLocations">LOCATIONS</string>
    <string name="btnBookAppointment">BOOK APPOINTMENT</string>
    <string name="ProfileText"><u> My Profile </u></string>
    <string name="ProfileImg">Img</string>
    <string name="AddFile">ADD A FILE HERE</string>
    <string name="ClickToUpLoad">CLICK ON THE ICON BELOW TO ADD YOUR FILE</string>
    <string name="UploadImg">Upload Image</string>
    <string name="EnterFirstName">First Name:</string>
    <string name="EnterLastName">Last Name:</string>
    <string name="EnterUserName">User Name:</string>
    <string name="SettingsIcon">SettingsIcon</string>
    <string name="SettingUsersName">User Name: </string>
    <string name="SettingsPassword">Password: </string>
    <string name="userNameProfile">User Name: </string>
    <string name="firstNameProfile">First Name: </string>
    <string name="lastNameProfile">Last Name: </string>
    <string name="emailProfile">Email: </string>
    <string name="phoneNumberProfile">Phone Number: </string>
    <string name="addressProfile">Address: </string>



    <string name="title_activity_locations">Locations</string>
    <string name="locations"><u>Locations</u></string>
    <string name="locationDesc">Below, you can find multiple COVID testing facilities in the VA Beach area. Click on a pin to find directions.</string>
    <string name="labsImage"></string>

    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="weekly">Weekly</string>
    <string name="toggle_weekly">Toggle weekly</string>

    <string name="covid_symptoms">Have you received a Covid-19 vaccine?</string>
    <string name="covid_symptoms2">Do you have a cough?</string>
    <string name="covid_symptoms3">Are you having shortness of breath or any difficulty breathing?</string>
    <string name="covid_symptoms4">Do you have chills or repeated shaking with chills?</string>
    <string name="covid_symptoms5">Do you have any muscle pain or body aches?</string>
    <string name="covid_symptoms6">Do you have any recent onset of headache or sore throat?</string>
    <string name="covid_symptoms7">Have you been experiencing nausea and/or vomiting?</string>
    <string name="covid_symptoms8">Do you have any recent loss of taste or smell?</string>
    <string name="covid_symptoms9">Have you been experiencing fatigue recently?</string>
    <string name="covid_symptoms10">Have you experienced any recent GI upset or diarrhea?</string>
    <string name="covid_symptoms11">Have you been advised to self-quarantine because of exposure to someone with Covid-19?</string>
    <string name="covid_symptoms12">Have you traveled in the past 14 days to any regions affected by Covid-19?</string>
    <string name="covid_symptoms13">Have you been tested for Covid-19? If yes, what was the result?</string>
    <string name="covid_symptoms14">Have you been diagnosed with Covid-19? If yes, when?</string>
    <string name="covid_symptoms15">Do you have a fever?</string>
    <string name="Check_results">Check My Results</string>

    <string name="userNameLabel">Username: </string>
    <string name="firstNameLabel">First Name: </string>
    <string name="lastNameLabel">Last Name: </string>
    <string name="emailLabel">Email: </string>
    <string name="phoneNumberLabel">Phone Number: </string>
    <string name="addressLabel">Address: </string>
    <string name="btnChangePassword">Change Password</string>
    <string name="btnDeleteProfile">Delete Profile</string>

</resources>