<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:backgroundTint="@color/black"
    tools:context=".Profile">


    <TextView
        android:id="@+id/topLogo8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="81dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/topLogo"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ProfileImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLogo8"
        app:srcCompat="@drawable/profile_img" />

    <TextView
        android:id="@+id/userNameProfile"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:text="@string/userNameProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/firstNameProfile"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/firstNameProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameProfile" />

    <TextView
        android:id="@+id/lastNameProfile"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/lastNameProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameProfile" />

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/emailProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameProfile" />

    <TextView
        android:id="@+id/phoneProfile"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:inputType="text"
        android:text="@string/phoneNumberProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailProfile" />

    <TextView
        android:id="@+id/addressProfile"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/addressProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneProfile" />

    <TextView
        android:id="@+id/team8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="81dp"
        android:text="@string/teamName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    <TextView
        android:id="@+id/userLbl"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/userNameLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/addressLbl"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/addressLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />

    <TextView
        android:id="@+id/phoneLbl"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/phoneNumberLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLbl" />

    <TextView
        android:id="@+id/emailLbl"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/emailLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLbl" />

    <TextView
        android:id="@+id/lastNameLbl"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/lastNameLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLbl" />

    <TextView
        android:id="@+id/firstNameLbl"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/firstNameLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLbl" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="99dp"
        android:layout_height="72dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="147dp"
        android:text="@string/btnDeleteProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="103dp"
        android:text="@string/btnChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>